src/styles/components/_box-layout.scss
.box-layout {
  background: url("/images/Shore2.jpg");
  background-size: cover;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.box-layout__box {
  background: #546e7a;
  padding: 5%;
  border: 2px white solid;
  border-radius: 22px 66px;
  width: 45rem;
  text-align: center;
  color: white;
}

.box-layout__title {
  font-size: $font-size-x-lrg;
}

.box-layout__sub-title {
  font-size: $font-size-med;
  font-style: italic;
}

.box-layout__button {
  background: $primary-gradient; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    $primary-gradient
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    $primary-gradient
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  border: 2px white solid;
  border-radius: 11px 33px;
  color: #37474f;
  font-family: "Rajdhani";
  font-size: $font-size-med;
  margin-top: 4rem;
  margin-bottom: 3rem;
  padding: 2.2rem;
}

.landing-title-fyi {
  // Reference: https://uigradients.com/#SublimeLight
  background: #70e1f5; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to top,
    #70e1f5,
    #ffd194
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to top,
    #70e1f5,
    #ffd194
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

